--- a/SwdProject/appsettings.json
+++ b/SwdProject/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "MyCnn": "Server= QUANGTRUONG;uid=sa;password=123;database=SwdProject;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true"
+    "MyCnn": "Server= (localdb)\\MSSQLLocalDB;uid=sa;password=123;database=SwdProject;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true"
   }
 
 }
