Day code login len

--- a/SwdProject/appsettings.Development.json
+++ b/SwdProject/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "MyCnn": "Server=localhost;Database=SwdProject;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
