--- a/SwdProject/SwdProject.csproj
+++ b/SwdProject/SwdProject.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>040024c4-61de-43dc-b15e-d3314277f1f8</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
